# browser-agent

./: .gitignore  AGENTS.md  README.md  justfile  pyproject.toml  requirements.txt
scripts/: test_compactor.py
src/browser_agent/: agent_logging.py  configuration.py  logging_config.py  zendriver_patch.py
src/browser_agent/adapters/: cdp_page_tracker.py  emitted_clean_launch.py  emitted_page_wait.py  emitted_pdf_download.py  emitted_save_html.py  emitted_save_record.py  emitted_snippets.py  human_challenge_detector.py  runs_config_loader.py  zendriver_page_wait.py
src/browser_agent/domain/: apply_result.py  challenge_status.py  code_generation_request.py  download_pdf_request.py  download_result.py  element_info.py  field_mapping.py  field_type.py  generated_script.py  html_snippet.py  identity_config.py  llm_field_draft.py  llm_mapping_draft.py  mapped_property.py  metadata_field.py  metadata_field_catalog.py  page_action.py  page_snapshot.py  page_structure.py  pdf_check_request.py  pdf_check_result.py  run_config.py  runs_config.py  script_execution_result.py  skipped_field.py  sync_plan.py  thesauri_snapshot.py  thesauri_value.py  thesaurus_mapping.py  thesaurus_mapping_entry.py  uwazi_mapping.py  uwazi_property.py  uwazi_template.py  validation_report.py  validation_request.py
src/browser_agent/drivers/: generate_script.py  step_0_generate_script.py  step_1_propose_mapping.py  step_2_uwazi_match.py  step_2_validate_data.py  step_3_uwazi_apply.py  step_4_validate_scraping.py  uwazi_test.py
src/browser_agent/ports/: browser_session_port.py  llm_port.py  (+3 more)
(+68 files in other folders)
