[project]
name = "browser-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.15.0",
    "curl-cffi>=0.15.0",
    "httpx>=0.28.1",
    "loguru>=0.7.3",
    "pydantic>=2.13.3",
    "pydantic-ai>=2.8.0",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.3",
    "uwazi-api",
    "zendriver>=0.15.5",
]


[dependency-groups]
dev = [
    "ruff",
    "basedpyright"
]

[tool.ruff]
line-length = 125

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/browser_agent"]

# [tool.pytest.ini_options]
# testpaths = ["tests"]
# pythonpath = ["src"]
# addopts = "-ra --strict-markers --strict-config"
# asyncio_mode = "auto"

[tool.uv.sources]
uwazi-api = { git = "https://github.com/huridocs/python_uwazi_API", rev = "2026.7.22.3" }
